tests/bad/bad52.tig
/* random swap */
let
  type iarr = array of int
  var arr := iarr [20] of 0
  var i := 0
  var j := 0
  var tmp := 0
in
  while i < 20 do
  (
  i:=i+1
  );
  j := range(0,19);
  i := range(0,19);
  i := 0;
  while i <= 20 do
  (
    print_int(arr[i]);
    print(", ");
    i := i+1
  )
end